Enable Error Prone hygiene checks